--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,9 +1,15 @@
-version: '7'
+version: '3.7'
+
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
+    build: .
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
     ports:
       - "9200:9200"
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+
+volumes:
+  esdata:
